Fixed pasting items on firefox

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -696,6 +696,8 @@ input[type="file"] {
     resize: none;
     font-family: 'KoHo', sans-serif;
     -webkit-user-modify: read-write-plaintext-only;
+    -moz-user-modify: read-write-plaintext-only;
+    user-modify: read-write-plaintext-only;
     cursor: text;
     overflow-y: auto;
     overflow-x: hidden;
